test/errors/class_missing_constructor_fail.hy
class MissingCtor
{
    int value
}

// expect: Class 'MissingCtor' must declare at least one constructor